syntax = "proto3";

message LoginRequest {
    oneof user_identifier {
        string phone_number = 1;
        string email = 2;
    }
    string password = 3;
}

enum LoginReturnCode {
    LOGIN_SUCCESS = 0;
    LOGIN_FAILED = 1;
}

message LoginResponseData {
    string session_token = 1;
}

message LoginResponse {
    LoginReturnCode return_code = 1;
    optional LoginResponseData response_data = 2;
}
