syntax = "proto3";

import "register_request.proto";
import "login_request.proto";

message AppRequest {
    uint32 request_id = 1;
    oneof request {
        RegisterRequest register_request = 2;
        LoginRequest logic_request = 3;
    }
}

message AppResponse{
    uint32 request_id = 1;
    oneof response {
        RegisterResponse register_response = 2;
        LoginResponse login_response = 3;
    }
}
